# glassy

./: README.md  glassy.cabal  stack.yaml
app/: Demo.hs  HelloWorld.hs  Todo.hs
src/: Glassy.hs
src/Glassy/: Color.hs  Core.hs  Transitive.hs
