name:                glassy
version:             0
synopsis:            simplistic GUI library
description:
homepage:            https://github.com/fumieval/glassy#readme
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          fumiexcel@gmail.com
copyright:           2017 Fumiaki Kinoshita
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Glassy, Glassy.Transitive, Glassy.Color
  ghc-options:         -threaded -Wall
  build-depends:       base
    , holz
    , linear
    , extensible
    , transformers
    , profunctors
    , lens
    , text
    , mtl
    , time
    , boundingboxes
  default-language:    Haskell2010

executable glassy-demo
  hs-source-dirs:      app
  main-is:             Demo.hs
  ghc-options:         -threaded
  build-depends:       base
                     , glassy
                     , extensible
                     , linear
                     , lens
  default-language:    Haskell2010

executable glassy-hello
  hs-source-dirs:      app
  main-is:             HelloWorld.hs
  ghc-options:         -threaded
  build-depends:       base
                     , glassy
  default-language:    Haskell2010

executable glassy-todo
  hs-source-dirs:      app
  main-is:             Todo.hs
  ghc-options:         -threaded
  build-depends:       base
                     , glassy
                     , extensible
                     , lens
                     , linear
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fumieval/glassy
